--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@
   color: #222;
 }
 body {
-  background-color: #f2f2f2;
+  background-color: #eee;
 }
 
 a {
@@ -25,41 +25,117 @@ a {
 .wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: stretch;
+}
+
+.nav {
+  display: flex;
   align-items: center;
 }
 
 .nav__list {
   display: flex;
-  gap: 24px;
+  height: 100%;
 }
 
 .nav__item {
+  height: 100%;
   list-style-type: none;
   font-size: 20px;
   font-weight: 600;
-  border-right: 1px solid #222;
-  padding-right: 24px;
+  display: block;
+  border: 1px solid #222;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+  border-bottom: none;
+  border-top: none;
+  border-right: none;
+  transition: ease-in;
+  transition-duration: 200ms;
+}
+
+.nav__item > a {
+  padding: 10px;
+  color: inherit;
+}
+
+.nav__item:hover {
+  /* display: block; */
+  background-color: #750014;
+  color: #fff;
 }
 
 .nav__item:last-child {
-  border: none;
+  border-right: 1px solid #222;
+}
+
+.logo {
+  border: 1px solid #222;
+  border-bottom: none;
+  border-top: none;
 }
 
 .logo img {
-  width: 160px;
+  width: 100px;
   background-color: transparent;
+  padding: 20px;
+}
+
+#banner {
+  border-bottom: 1px solid #222;
+}
+
+.banner__image img {
+  width: 100%;
+  transition: ease-in;
+  transition-duration: 200ms;
+}
+
+.banner__image img:hover {
+  box-shadow: -10px 10px 0px #111;
+  transform: translate(4px, -4px);
+}
+
+.wrapper.banner {
+  gap: 60px;
+  border: 1px solid #222;
+  padding: 80px 20px;
+  border-top: none;
+  border-bottom: none;
 }
 
 .banner__title {
-  color: #f2f2f2;
-  background-color: transparent;
-  font-size: 40px;
-  margin-top: 100px;
+  font-size: 48px;
+  margin-bottom: 24px;
+  color: #750014;
 }
 
 .banner__subtext {
-  color: #f2f2f2;
-  font-size: 24px;
-  padding-top: 40px;
-  padding-bottom: 100px;
+  opacity: 0.75;
+  font-size: 16px;
+}
+
+.banner__text {
+  margin-top: 40px;
+}
+
+.btn {
+  margin-top: 48px;
+  padding: 12px 20px;
+  background-color: #750014;
+  border: none;
+  border-radius: 5px;
+  color: #f2f2ff;
+  width: 200px;
+  font-weight: 500;
+  font-size: 20px;
+  transition: ease-in;
+  transition-duration: 200ms;
+}
+
+.btn:hover {
+  box-shadow: -10px 10px 0px #111;
+  transform: translate(4px, -4px);
 }
